--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,222 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<layout>
+    <data>
+        <variable name="mainViewModel" type="ru.orehovai.testqiwi.viewmodel.MainViewModel"/>
+        <import type="android.view.View"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Выбран Номер карты"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp" android:id="@+id/tv_card_number"
-            android:textColor="@android:color/background_dark"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Выбран Номер карты"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp" android:id="@+id/tv_card_number"
+                android:textColor="@android:color/background_dark"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/id_card_number_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_card_number"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-
-            android:theme="@style/TextInputLayoutAppearance" android:layout_marginEnd="16dp">
-
-        <AutoCompleteTextView
-                android:id="@+id/id_card_number"
-                android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/id_card_number_layout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:imeOptions="actionNext|flagNoExtractUi"
-                android:singleLine="true"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:cursorVisible="false"
-                android:text="Номер карты"
-                android:hint="Тип идентификатора"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_card_number"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
 
-                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableTint="@color/cardview_dark_background"
-        />
-    </com.google.android.material.textfield.TextInputLayout>
+                android:theme="@style/TextInputLayoutAppearance" android:layout_marginEnd="16dp">
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_card_number"
-            android:hint="Номер карты"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <AutoCompleteTextView
+                    android:id="@+id/id_card_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Выбран Номер счета"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_card_number"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/tv_account_number"
-            android:textColor="@android:color/background_dark"/>
+                    android:imeOptions="actionNext|flagNoExtractUi"
+                    android:singleLine="true"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:cursorVisible="false"
+                    android:text="Номер карты"
+                    android:hint="Тип идентификатора"
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/id_account_number_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
 
+                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableTint="@color/cardview_dark_background"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_account_number"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+                    android:onItemSelected="@{(parent, view, position, id) -> mainViewModel.onAccountTypeItemClick(position)}"
+            />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            android:theme="@style/TextInputLayoutAppearance"
-            android:layout_marginEnd="16dp">
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_card_number"
+                android:hint="Номер карты"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-        <AutoCompleteTextView
-                android:id="@+id/id_account_number"
-                android:layout_width="match_parent"
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Выбран Номер счета"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_card_number"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:id="@+id/tv_account_number"
+                android:textColor="@android:color/background_dark"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/id_account_number_layout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:imeOptions="actionNext|flagNoExtractUi"
-                android:singleLine="true"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:cursorVisible="false"
-                android:text="Номер счета"
-                android:hint="Тип идентификатора"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_account_number"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
 
-                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableTint="@color/cardview_dark_background"
-        />
-    </com.google.android.material.textfield.TextInputLayout>
+                android:theme="@style/TextInputLayoutAppearance"
+                android:layout_marginEnd="16dp">
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_bik"
-            android:hint="БИК"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/id_account_number_layout"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <AutoCompleteTextView
+                    android:id="@+id/id_account_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_account_number"
-            android:hint="Номер счета"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_bik"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    android:imeOptions="actionNext|flagNoExtractUi"
+                    android:singleLine="true"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:cursorVisible="false"
+                    android:text="Номер счета"
+                    android:hint="Тип идентификатора"
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/payment_type_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_account_number"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableTint="@color/cardview_dark_background"
+            />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            android:theme="@style/TextInputLayoutAppearance"
-            android:layout_marginEnd="16dp">
-
-        <AutoCompleteTextView
-                android:id="@+id/payment_type"
-                android:layout_width="match_parent"
+        <EditText
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_bik"
+                android:hint="БИК"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/id_account_number_layout"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-                android:imeOptions="actionNext|flagNoExtractUi"
-                android:singleLine="true"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:cursorVisible="false"
-                android:text="Обычный платеж"
-                android:hint="Тип платежа"
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_account_number"
+                android:hint="Номер счета"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/et_bik"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/payment_type_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_account_number"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
 
-                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                android:drawableTint="@color/cardview_dark_background"
-        />
-    </com.google.android.material.textfield.TextInputLayout>
+                android:theme="@style/TextInputLayoutAppearance"
+                android:layout_marginEnd="16dp">
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_first_name"
-            android:hint="Фамилия владельца счета"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/payment_type_layout"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <AutoCompleteTextView
+                    android:id="@+id/payment_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_last_name"
-            android:hint="Имя владельца счета"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_first_name"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    android:imeOptions="actionNext|flagNoExtractUi"
+                    android:singleLine="true"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:cursorVisible="false"
+                    android:text="Обычный платеж"
+                    android:hint="Тип платежа"
 
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/et_father_name"
-            android:hint="Отчество владельца счета"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_last_name"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:drawableTint="@color/cardview_dark_background"
+            />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_first_name"
+                android:hint="Фамилия владельца счета"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/payment_type_layout"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_last_name"
+                android:hint="Имя владельца счета"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/et_first_name"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_father_name"
+                android:hint="Отчество владельца счета"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/et_last_name"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
