--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="mainViewModel" type="ru.orehovai.testqiwi.viewmodel.MainViewModel"/>
         <import type="android.view.View"/>
+        <import type="android.text.InputType"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Выбран Номер карты"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp" android:id="@+id/tv_card_number"
-                android:textColor="@android:color/background_dark"/>
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/id_card_number_layout"
@@ -30,11 +21,14 @@
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_card_number"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
 
-                android:theme="@style/TextInputLayoutAppearance" android:layout_marginEnd="16dp">
+
+                android:hint="@{mainViewModel.accountTypeFull.view.prompt}"
+
+                android:theme="@style/TextInputLayoutAppearance"
+                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent">
 
             <AutoCompleteTextView
                     android:id="@+id/id_card_number"
@@ -45,8 +39,7 @@
                     android:singleLine="true"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:cursorVisible="false"
-                    android:text="Номер карты"
-                    android:hint="Тип идентификатора"
+                    android:text="@{mainViewModel.accountTypeFull.view.title}"
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -55,84 +48,24 @@
                     android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                     android:drawableTint="@color/cardview_dark_background"
 
-                    android:onItemSelected="@{(parent, view, position, id) -> mainViewModel.onAccountTypeItemClick(position)}"
+
             />
         </com.google.android.material.textfield.TextInputLayout>
 
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/et_card_number"
-                android:hint="Номер карты"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout"
-                android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:customInput='@{mainViewModel.mfoFull.view.widget.keyboard.equals("numeric")? InputType.TYPE_CLASS_NUMBER : InputType.TYPE_CLASS_TEXT}'
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Выбран Номер счета"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_card_number"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
-                android:id="@+id/tv_account_number"
-                android:textColor="@android:color/background_dark"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/id_account_number_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_account_number"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-
-                android:theme="@style/TextInputLayoutAppearance"
-                android:layout_marginEnd="16dp">
-
-            <AutoCompleteTextView
-                    android:id="@+id/id_account_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:imeOptions="actionNext|flagNoExtractUi"
-                    android:singleLine="true"
-                    android:inputType="textNoSuggestions|textVisiblePassword"
-                    android:cursorVisible="false"
-                    android:text="Номер счета"
-                    android:hint="Тип идентификатора"
-
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-
-                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
-                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                    android:drawableTint="@color/cardview_dark_background"
-            />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/et_bik"
-                android:hint="БИК"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/id_account_number_layout"
+                android:hint="@{mainViewModel.mfoFull.view.prompt}"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/id_card_number_layout"/>
 
         <EditText
                 android:layout_width="0dp"
